--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "predeploy": "npm run build",
-  "deploy": "gh-pages -d build",
+   
+    "deploy": "gh-pages -d dist",
     "preview": "vite preview"
-    
   },
   "devDependencies": {
     "@highcharts/svelte": "^1.1.1",
+    "@sveltejs/adapter-static": "^3.0.8",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "gh-pages": "^6.3.0",
     "svelte": "^5.28.1",
